--- a/package.json
+++ b/package.json
@@ -1,12 +1,35 @@
 {
   "name": "express",
   "type": "module",
+  "scripts": {
+    "build": "tsc && tsup",
+    "start:dev": "node --import=tsx --watch src/index.ts",
+    "start:prod": "node dist/index.js",
+    "check": "biome check --write",
+    "test": "vitest run",
+    "test:cov": "vitest run --coverage"
+  },
   "dependencies": {
-    "express": "5.1.0"
+    "@asteasolutions/zod-to-openapi": "^8.4.0",
+    "@dynamic-labs-wallet/node-evm": "^0.0.241",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "jwks-rsa": "^3.2.0",
+    "morgan": "^1.10.1",
+    "viem": "^2.44.1",
+    "vitest": "^4.0.17",
+    "winston": "^3.19.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
-    "@types/node": "20.11.17",
     "@types/express": "5.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "20.19.0",
+    "tsx": "^4.21.0",
     "typescript": "5.8.3"
   },
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
