--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
         "express": "5.1.0",
         "express-rate-limit": "^8.2.1",
         "helmet": "^8.1.0",
+        "install": "^0.13.0",
         "jsonwebtoken": "^9.0.3",
         "jwks-rsa": "^3.2.0",
+        "mongodb": "^7.0.0",
         "morgan": "^1.10.1",
         "viem": "^2.44.1",
         "vitest": "^4.0.17",
