--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,8 @@
         "outDir": "./dist",
         "module": "NodeNext",
         "skipLibCheck": true,
-        "esModuleInterop": true,
         "declaration": true,
-        "declarationMap": true,
+        "declarationMap": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
