--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
         "zod": "^4.0.5"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.19",
         "@types/express": "5.0.0",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/morgan": "^1.9.10",
         "@types/node": "20.19.0",
         "prettier": "^3.7.4",
         "tsx": "^4.21.0",
