--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,6 @@ jobs:
 
             - name: Check Prettier formatting
               run: pnpm run format:check
+
+            - name: Run tests
+              run: pnpm run test
