--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/morgan": "^1.9.10",
         "@types/node": "20.19.0",
+        "@types/supertest": "^6.0.3",
         "@vitest/coverage-v8": "4.0.17",
         "nock": "^14.0.10",
         "prettier": "^3.7.4",
+        "supertest": "^7.2.2",
         "tsx": "^4.21.0",
         "typescript": "5.8.3"
     },
